cost of living data cleaned as dict the converted to pandas df

--- a/clean.ipynb
+++ b/clean.ipynb
@@ -10,7 +10,10 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from glob import glob\n",
-    "import re"
+    "import re\n",
+    "import csv\n",
+    "from collections import OrderedDict\n",
+    "import numpy as np"
    ]
   },
   {
@@ -250,6 +253,179 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Balance2014</th>\n",
+       "      <th>NumberOfBorrowers</th>\n",
+       "      <th>minBal</th>\n",
+       "      <th>maxBal</th>\n",
+       "      <th>percentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>&lt;$5001</td>\n",
+       "      <td>9028800</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5001</td>\n",
+       "      <td>0.20831</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>betw $5000 and $10000</td>\n",
+       "      <td>7785500</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>0.179625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>betw $10000 and $25000</td>\n",
+       "      <td>12348000</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>25000</td>\n",
+       "      <td>0.28489</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>betw $25000 and $50000</td>\n",
+       "      <td>7997000</td>\n",
+       "      <td>25000</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>0.184505</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>betw $50000 and $75000</td>\n",
+       "      <td>3126800</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>75000</td>\n",
+       "      <td>0.0721407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>betw $75000 and $100000</td>\n",
+       "      <td>1238100</td>\n",
+       "      <td>75000</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>0.0285651</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>betw $100000 and $150000</td>\n",
+       "      <td>1026100</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>150000</td>\n",
+       "      <td>0.0236739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>betw $150000 and $200000</td>\n",
+       "      <td>444200</td>\n",
+       "      <td>150000</td>\n",
+       "      <td>200000</td>\n",
+       "      <td>0.0102485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>betw $200000+</td>\n",
+       "      <td>348600</td>\n",
+       "      <td>200000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0080428</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Balance2014 NumberOfBorrowers  minBal  maxBal percentage\n",
+       "0                    <$5001           9028800     NaN    5001    0.20831\n",
+       "1     betw $5000 and $10000           7785500    5000   10000   0.179625\n",
+       "2    betw $10000 and $25000          12348000   10000   25000    0.28489\n",
+       "3    betw $25000 and $50000           7997000   25000   50000   0.184505\n",
+       "4    betw $50000 and $75000           3126800   50000   75000  0.0721407\n",
+       "5   betw $75000 and $100000           1238100   75000  100000  0.0285651\n",
+       "6  betw $100000 and $150000           1026100  100000  150000  0.0236739\n",
+       "7  betw $150000 and $200000            444200  150000  200000  0.0102485\n",
+       "8             betw $200000+            348600  200000     NaN  0.0080428"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#import amount of debt distributed with a context manager\n",
+    "\n",
+    "# open file with a context manager\n",
+    "with open('data/debt_amt_distribution2014.csv') as file:\n",
+    "    reader = csv.DictReader(file)\n",
+    "    borrowers = OrderedDict()\n",
+    "    \n",
+    "    # store names for columns\n",
+    "    cols=reader.fieldnames\n",
+    "    \n",
+    "    # loop through rows of file\n",
+    "    for i, row in enumerate(reader):\n",
+    "        \n",
+    "        # use RegEx to extract start and stop of balance range as ints\n",
+    "        loan_bal = str(row[cols[0]])\n",
+    "        bal_range = re.findall(r'\\d+', loan_bal)\n",
+    "        map(int, bal_range)\n",
+    "        \n",
+    "        # remove comma formatting in numbers\n",
+    "        num_bor = str(row[cols[1]])\n",
+    "        num_bor = int(num_bor.replace(',', ''))\n",
+    "        \n",
+    "        # append entry to OrderedDict\n",
+    "        borrowers[i] = [loan_bal, num_bor, bal_range[0], bal_range[-1]]\n",
+    "    \n",
+    "# convert dict to DataFrame and format columns\n",
+    "borrowers = pd.DataFrame(borrowers)\n",
+    "borrowers = borrowers.transpose()\n",
+    "borrowers.columns = cols + ['minBal', 'maxBal']\n",
+    "\n",
+    "# Set extremes of ranges to NaN\n",
+    "borrowers.minBal[0] = np.nan\n",
+    "borrowers.maxBal[8] = np.nan\n",
+    "\n",
+    "# compute total borrowers and percentage of borrowers by group\n",
+    "borrowers['percentage'] = (borrowers.NumberOfBorrowers/sum(borrowers.NumberOfBorrowers))\n",
+    "borrowers = borrowers.round({'percentage': 3})\n",
+    "\n",
+    "# final version of the 2014 borrowers DataFrame\n",
+    "borrowers_2014 = borrowers.copy()\n",
+    "\n",
+    "borrowers_2014"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import amount of debt distributed in 2014\n",
@@ -261,14 +437,12 @@
     "# compute total borrowers and percentage of borrowers by group\n",
     "borrowers['total'] = sum(borrowers.NumberOfBorrowers)\n",
     "borrowers['percentage'] = round(borrowers.NumberOfBorrowers / borrowers.total, 3)\n",
-    "\n",
-    "# final version of the 2014 borrowers DataFrame\n",
-    "borrowers_2014 = borrowers.copy()"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +506,7 @@
        "1  2005    161.0  129.0   55.6   38.3  8.2      0.7"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -420,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +706,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import cost of living dataset\n",
+    "cost_of_living = pd.read_csv('data/cost-of-living-index.csv')\n",
+    "\n",
+    "# separate columns for country and city\n",
+    "cost_of_living['country'] = cost_of_living['City'].astype(str).str.split(',').str[1]\n",
+    "cost_of_living['city'] = cost_of_living['City'].astype(str).str.split(',').str[0]\n",
+    "\n",
+    "# convert city and country from object type to string\n",
+    "cost_of_living['country_str'] = cost_of_living.country.apply(lambda x: str(x).split(','))\n",
+    "\n",
+    "# Just need City, Cost Of Living Index, and Rank\n",
+    "cost_of_living = cost_of_living[['country','city', 'Cost of Living Index', 'Rank']]\n",
+    "cost_of_living.columns = ['country', 'city', 'cost_of_living', 'rank']\n",
+    "\n",
+    "\n",
+    "#### FIX ME\n",
+    "# Filter data not related to United States\n",
+    "#cost_of_living = cost_of_living[cost_of_living['country'].astype(str).str=='United States']\n",
+    "#cost_of_living['country']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# inspect final datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -598,117 +815,31 @@
        "      <td>118.42</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>531</td>\n",
-       "      <td>India</td>\n",
-       "      <td>Vadodara</td>\n",
-       "      <td>22.28</td>\n",
-       "      <td>532</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>532</td>\n",
-       "      <td>India</td>\n",
-       "      <td>Kochi</td>\n",
-       "      <td>21.73</td>\n",
-       "      <td>533</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>533</td>\n",
-       "      <td>India</td>\n",
-       "      <td>Visakhapatnam</td>\n",
-       "      <td>21.52</td>\n",
-       "      <td>534</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>534</td>\n",
-       "      <td>India</td>\n",
-       "      <td>Navi Mumbai</td>\n",
-       "      <td>19.30</td>\n",
-       "      <td>535</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>535</td>\n",
-       "      <td>India</td>\n",
-       "      <td>Thiruvananthapuram</td>\n",
-       "      <td>19.26</td>\n",
-       "      <td>536</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>536 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          country                city  cost_of_living  rank\n",
-       "0         Bermuda            Hamilton          137.56     1\n",
-       "1     Switzerland              Zurich          128.65     2\n",
-       "2     Switzerland               Basel          126.89     3\n",
-       "3     Switzerland            Lausanne          119.62     4\n",
-       "4     Switzerland                Bern          118.42     5\n",
-       "..            ...                 ...             ...   ...\n",
-       "531         India            Vadodara           22.28   532\n",
-       "532         India               Kochi           21.73   533\n",
-       "533         India       Visakhapatnam           21.52   534\n",
-       "534         India         Navi Mumbai           19.30   535\n",
-       "535         India  Thiruvananthapuram           19.26   536\n",
-       "\n",
-       "[536 rows x 4 columns]"
+       "        country      city  cost_of_living  rank\n",
+       "0       Bermuda  Hamilton          137.56     1\n",
+       "1   Switzerland    Zurich          128.65     2\n",
+       "2   Switzerland     Basel          126.89     3\n",
+       "3   Switzerland  Lausanne          119.62     4\n",
+       "4   Switzerland      Bern          118.42     5"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# import cost of living dataset\n",
-    "cost_of_living = pd.read_csv('data/cost-of-living-index.csv')\n",
-    "\n",
-    "# separate columns for country and city\n",
-    "cost_of_living['country'] = cost_of_living['City'].astype(str).str.split(',').str[1]\n",
-    "cost_of_living['city'] = cost_of_living['City'].astype(str).str.split(',').str[0]\n",
-    "\n",
-    "# convert city and country from object type to string\n",
-    "cost_of_living['country_str'] = cost_of_living.country.apply(lambda x: str(x).split(','))\n",
-    "\n",
-    "# Just need City, Cost Of Living Index, and Rank\n",
-    "cost_of_living = cost_of_living[['country','city', 'Cost of Living Index', 'Rank']]\n",
-    "cost_of_living.columns = ['country', 'city', 'cost_of_living', 'rank']\n",
-    "\n",
-    "\n",
-    "#### FIX ME\n",
-    "# Filter data not related to United States\n",
-    "#cost_of_living = cost_of_living[cost_of_living['country'].astype(str).str=='United States']\n",
-    "#cost_of_living['country']\n",
-    "cost_of_living"
+    "cost_of_living.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Final datasets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +865,8 @@
        "      <th></th>\n",
        "      <th>Balance2014</th>\n",
        "      <th>NumberOfBorrowers</th>\n",
-       "      <th>total</th>\n",
+       "      <th>minBal</th>\n",
+       "      <th>maxBal</th>\n",
        "      <th>percentage</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -743,51 +875,56 @@
        "      <td>0</td>\n",
        "      <td>&lt;$5001</td>\n",
        "      <td>9028800</td>\n",
-       "      <td>43343100</td>\n",
-       "      <td>0.208</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5001</td>\n",
+       "      <td>0.20831</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>betw $5000 and $10000</td>\n",
        "      <td>7785500</td>\n",
-       "      <td>43343100</td>\n",
-       "      <td>0.180</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>0.179625</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>betw $10000 and $25000</td>\n",
        "      <td>12348000</td>\n",
-       "      <td>43343100</td>\n",
-       "      <td>0.285</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>25000</td>\n",
+       "      <td>0.28489</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>betw $25000 and $50000</td>\n",
        "      <td>7997000</td>\n",
-       "      <td>43343100</td>\n",
-       "      <td>0.185</td>\n",
+       "      <td>25000</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>0.184505</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>betw $50000 and $75000</td>\n",
        "      <td>3126800</td>\n",
-       "      <td>43343100</td>\n",
-       "      <td>0.072</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>75000</td>\n",
+       "      <td>0.0721407</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              Balance2014  NumberOfBorrowers     total  percentage\n",
-       "0                  <$5001            9028800  43343100       0.208\n",
-       "1   betw $5000 and $10000            7785500  43343100       0.180\n",
-       "2  betw $10000 and $25000           12348000  43343100       0.285\n",
-       "3  betw $25000 and $50000            7997000  43343100       0.185\n",
-       "4  betw $50000 and $75000            3126800  43343100       0.072"
+       "              Balance2014 NumberOfBorrowers minBal maxBal percentage\n",
+       "0                  <$5001           9028800    NaN   5001    0.20831\n",
+       "1   betw $5000 and $10000           7785500   5000  10000   0.179625\n",
+       "2  betw $10000 and $25000          12348000  10000  25000    0.28489\n",
+       "3  betw $25000 and $50000           7997000  25000  50000   0.184505\n",
+       "4  betw $50000 and $75000           3126800  50000  75000  0.0721407"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +1087,7 @@
        "4   273.0   299.0   312.0   320.0   356.0   369.0       18.0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1257,7 @@
        "Agriculture, forestry, fishing and hunting         Female  Median earnings (dollars)  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1152,12 +1289,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "export_borrowers = borrowers_2014.to_csv('clean_data/borrowers_2014.csv', header=True)\n",
     "export_borrowers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "export_col = cost_of_living.to_csv('clean_data/cost_of_living.csv')\n",
+    "export_col"
    ]
   }
  ],
