--- a/clean.ipynb
+++ b/clean.ipynb
@@ -285,71 +285,71 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>&lt;$5001</td>\n",
+       "      <td>&lt;$5000</td>\n",
        "      <td>9028800</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>5001</td>\n",
+       "      <td>5000</td>\n",
        "      <td>0.20831</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>betw $5000 and $10000</td>\n",
+       "      <td>$5001 to $10000</td>\n",
        "      <td>7785500</td>\n",
-       "      <td>5000</td>\n",
+       "      <td>5001</td>\n",
        "      <td>10000</td>\n",
        "      <td>0.179625</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>betw $10000 and $25000</td>\n",
+       "      <td>$10001 to $25000</td>\n",
        "      <td>12348000</td>\n",
-       "      <td>10000</td>\n",
+       "      <td>10001</td>\n",
        "      <td>25000</td>\n",
        "      <td>0.28489</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>betw $25000 and $50000</td>\n",
+       "      <td>$25001 to $50000</td>\n",
        "      <td>7997000</td>\n",
-       "      <td>25000</td>\n",
+       "      <td>25001</td>\n",
        "      <td>50000</td>\n",
        "      <td>0.184505</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>betw $50000 and $75000</td>\n",
+       "      <td>$50001 to $75000</td>\n",
        "      <td>3126800</td>\n",
-       "      <td>50000</td>\n",
+       "      <td>50001</td>\n",
        "      <td>75000</td>\n",
        "      <td>0.0721407</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
-       "      <td>betw $75000 and $100000</td>\n",
+       "      <td>$75001 to $100000</td>\n",
        "      <td>1238100</td>\n",
-       "      <td>75000</td>\n",
+       "      <td>75001</td>\n",
        "      <td>100000</td>\n",
        "      <td>0.0285651</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
-       "      <td>betw $100000 and $150000</td>\n",
+       "      <td>$100001 to $150000</td>\n",
        "      <td>1026100</td>\n",
-       "      <td>100000</td>\n",
+       "      <td>100001</td>\n",
        "      <td>150000</td>\n",
        "      <td>0.0236739</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
-       "      <td>betw $150000 and $200000</td>\n",
+       "      <td>$150001 to $200000</td>\n",
        "      <td>444200</td>\n",
-       "      <td>150000</td>\n",
+       "      <td>150001</td>\n",
        "      <td>200000</td>\n",
        "      <td>0.0102485</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
-       "      <td>betw $200000+</td>\n",
+       "      <td>$200000+</td>\n",
        "      <td>348600</td>\n",
        "      <td>200000</td>\n",
        "      <td>NaN</td>\n",
@@ -360,16 +360,16 @@
        "</div>"
       ],
       "text/plain": [
-       "                Balance2014 NumberOfBorrowers  minBal  maxBal percentage\n",
-       "0                    <$5001           9028800     NaN    5001    0.20831\n",
-       "1     betw $5000 and $10000           7785500    5000   10000   0.179625\n",
-       "2    betw $10000 and $25000          12348000   10000   25000    0.28489\n",
-       "3    betw $25000 and $50000           7997000   25000   50000   0.184505\n",
-       "4    betw $50000 and $75000           3126800   50000   75000  0.0721407\n",
-       "5   betw $75000 and $100000           1238100   75000  100000  0.0285651\n",
-       "6  betw $100000 and $150000           1026100  100000  150000  0.0236739\n",
-       "7  betw $150000 and $200000            444200  150000  200000  0.0102485\n",
-       "8             betw $200000+            348600  200000     NaN  0.0080428"
+       "          Balance2014 NumberOfBorrowers  minBal  maxBal percentage\n",
+       "0              <$5000           9028800     NaN    5000    0.20831\n",
+       "1     $5001 to $10000           7785500    5001   10000   0.179625\n",
+       "2    $10001 to $25000          12348000   10001   25000    0.28489\n",
+       "3    $25001 to $50000           7997000   25001   50000   0.184505\n",
+       "4    $50001 to $75000           3126800   50001   75000  0.0721407\n",
+       "5   $75001 to $100000           1238100   75001  100000  0.0285651\n",
+       "6  $100001 to $150000           1026100  100001  150000  0.0236739\n",
+       "7  $150001 to $200000            444200  150001  200000  0.0102485\n",
+       "8            $200000+            348600  200000     NaN  0.0080428"
       ]
      },
      "execution_count": 6,
@@ -873,41 +873,41 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>&lt;$5001</td>\n",
+       "      <td>&lt;$5000</td>\n",
        "      <td>9028800</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>5001</td>\n",
+       "      <td>5000</td>\n",
        "      <td>0.20831</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>betw $5000 and $10000</td>\n",
+       "      <td>$5001 to $10000</td>\n",
        "      <td>7785500</td>\n",
-       "      <td>5000</td>\n",
+       "      <td>5001</td>\n",
        "      <td>10000</td>\n",
        "      <td>0.179625</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>betw $10000 and $25000</td>\n",
+       "      <td>$10001 to $25000</td>\n",
        "      <td>12348000</td>\n",
-       "      <td>10000</td>\n",
+       "      <td>10001</td>\n",
        "      <td>25000</td>\n",
        "      <td>0.28489</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>betw $25000 and $50000</td>\n",
+       "      <td>$25001 to $50000</td>\n",
        "      <td>7997000</td>\n",
-       "      <td>25000</td>\n",
+       "      <td>25001</td>\n",
        "      <td>50000</td>\n",
        "      <td>0.184505</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>betw $50000 and $75000</td>\n",
+       "      <td>$50001 to $75000</td>\n",
        "      <td>3126800</td>\n",
-       "      <td>50000</td>\n",
+       "      <td>50001</td>\n",
        "      <td>75000</td>\n",
        "      <td>0.0721407</td>\n",
        "    </tr>\n",
@@ -916,12 +916,12 @@
        "</div>"
       ],
       "text/plain": [
-       "              Balance2014 NumberOfBorrowers minBal maxBal percentage\n",
-       "0                  <$5001           9028800    NaN   5001    0.20831\n",
-       "1   betw $5000 and $10000           7785500   5000  10000   0.179625\n",
-       "2  betw $10000 and $25000          12348000  10000  25000    0.28489\n",
-       "3  betw $25000 and $50000           7997000  25000  50000   0.184505\n",
-       "4  betw $50000 and $75000           3126800  50000  75000  0.0721407"
+       "        Balance2014 NumberOfBorrowers minBal maxBal percentage\n",
+       "0            <$5000           9028800    NaN   5000    0.20831\n",
+       "1   $5001 to $10000           7785500   5001  10000   0.179625\n",
+       "2  $10001 to $25000          12348000  10001  25000    0.28489\n",
+       "3  $25001 to $50000           7997000  25001  50000   0.184505\n",
+       "4  $50001 to $75000           3126800  50001  75000  0.0721407"
       ]
      },
      "execution_count": 17,
