--- a/clean.ipynb
+++ b/clean.ipynb
@@ -275,7 +275,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Balance2014</th>\n",
        "      <th>NumberOfBorrowers</th>\n",
        "      <th>minBal</th>\n",
        "      <th>maxBal</th>\n",
@@ -285,7 +284,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>&lt;$5000</td>\n",
        "      <td>9028800</td>\n",
        "      <td>NaN</td>\n",
        "      <td>5000</td>\n",
@@ -293,7 +291,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>$5001 to $10000</td>\n",
        "      <td>7785500</td>\n",
        "      <td>5001</td>\n",
        "      <td>10000</td>\n",
@@ -301,7 +298,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>$10001 to $25000</td>\n",
        "      <td>12348000</td>\n",
        "      <td>10001</td>\n",
        "      <td>25000</td>\n",
@@ -309,7 +305,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>$25001 to $50000</td>\n",
        "      <td>7997000</td>\n",
        "      <td>25001</td>\n",
        "      <td>50000</td>\n",
@@ -317,7 +312,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>$50001 to $75000</td>\n",
        "      <td>3126800</td>\n",
        "      <td>50001</td>\n",
        "      <td>75000</td>\n",
@@ -325,7 +319,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
-       "      <td>$75001 to $100000</td>\n",
        "      <td>1238100</td>\n",
        "      <td>75001</td>\n",
        "      <td>100000</td>\n",
@@ -333,7 +326,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
-       "      <td>$100001 to $150000</td>\n",
        "      <td>1026100</td>\n",
        "      <td>100001</td>\n",
        "      <td>150000</td>\n",
@@ -341,7 +333,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
-       "      <td>$150001 to $200000</td>\n",
        "      <td>444200</td>\n",
        "      <td>150001</td>\n",
        "      <td>200000</td>\n",
@@ -349,7 +340,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
-       "      <td>$200000+</td>\n",
        "      <td>348600</td>\n",
        "      <td>200000</td>\n",
        "      <td>NaN</td>\n",
@@ -360,16 +350,16 @@
        "</div>"
       ],
       "text/plain": [
-       "          Balance2014 NumberOfBorrowers  minBal  maxBal percentage\n",
-       "0              <$5000           9028800     NaN    5000    0.20831\n",
-       "1     $5001 to $10000           7785500    5001   10000   0.179625\n",
-       "2    $10001 to $25000          12348000   10001   25000    0.28489\n",
-       "3    $25001 to $50000           7997000   25001   50000   0.184505\n",
-       "4    $50001 to $75000           3126800   50001   75000  0.0721407\n",
-       "5   $75001 to $100000           1238100   75001  100000  0.0285651\n",
-       "6  $100001 to $150000           1026100  100001  150000  0.0236739\n",
-       "7  $150001 to $200000            444200  150001  200000  0.0102485\n",
-       "8            $200000+            348600  200000     NaN  0.0080428"
+       "  NumberOfBorrowers  minBal  maxBal percentage\n",
+       "0           9028800     NaN    5000    0.20831\n",
+       "1           7785500    5001   10000   0.179625\n",
+       "2          12348000   10001   25000    0.28489\n",
+       "3           7997000   25001   50000   0.184505\n",
+       "4           3126800   50001   75000  0.0721407\n",
+       "5           1238100   75001  100000  0.0285651\n",
+       "6           1026100  100001  150000  0.0236739\n",
+       "7            444200  150001  200000  0.0102485\n",
+       "8            348600  200000     NaN  0.0080428"
       ]
      },
      "execution_count": 6,
@@ -407,6 +397,7 @@
     "borrowers = pd.DataFrame(borrowers)\n",
     "borrowers = borrowers.transpose()\n",
     "borrowers.columns = cols + ['minBal', 'maxBal']\n",
+    "borrowers = borrowers.drop(axis=1, labels=cols[0])\n",
     "\n",
     "# Set extremes of ranges to NaN\n",
     "borrowers.minBal[0] = np.nan\n",
@@ -863,7 +854,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Balance2014</th>\n",
        "      <th>NumberOfBorrowers</th>\n",
        "      <th>minBal</th>\n",
        "      <th>maxBal</th>\n",
@@ -873,7 +863,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>&lt;$5000</td>\n",
        "      <td>9028800</td>\n",
        "      <td>NaN</td>\n",
        "      <td>5000</td>\n",
@@ -881,7 +870,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>$5001 to $10000</td>\n",
        "      <td>7785500</td>\n",
        "      <td>5001</td>\n",
        "      <td>10000</td>\n",
@@ -889,7 +877,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>$10001 to $25000</td>\n",
        "      <td>12348000</td>\n",
        "      <td>10001</td>\n",
        "      <td>25000</td>\n",
@@ -897,7 +884,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>$25001 to $50000</td>\n",
        "      <td>7997000</td>\n",
        "      <td>25001</td>\n",
        "      <td>50000</td>\n",
@@ -905,7 +891,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>$50001 to $75000</td>\n",
        "      <td>3126800</td>\n",
        "      <td>50001</td>\n",
        "      <td>75000</td>\n",
@@ -916,12 +901,12 @@
        "</div>"
       ],
       "text/plain": [
-       "        Balance2014 NumberOfBorrowers minBal maxBal percentage\n",
-       "0            <$5000           9028800    NaN   5000    0.20831\n",
-       "1   $5001 to $10000           7785500   5001  10000   0.179625\n",
-       "2  $10001 to $25000          12348000  10001  25000    0.28489\n",
-       "3  $25001 to $50000           7997000  25001  50000   0.184505\n",
-       "4  $50001 to $75000           3126800  50001  75000  0.0721407"
+       "  NumberOfBorrowers minBal maxBal percentage\n",
+       "0           9028800    NaN   5000    0.20831\n",
+       "1           7785500   5001  10000   0.179625\n",
+       "2          12348000  10001  25000    0.28489\n",
+       "3           7997000  25001  50000   0.184505\n",
+       "4           3126800  50001  75000  0.0721407"
       ]
      },
      "execution_count": 17,
@@ -1303,7 +1288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_col = cost_of_living.to_csv('clean_data/cost_of_living.csv')\n",
+    "export_col = cost_of_living.to_csv('clean_data/cost_of_living.csv', header=True)\n",
     "export_col"
    ]
   }
