resolve country issue and set multi index for Cost of Living

--- a/clean.ipynb
+++ b/clean.ipynb
@@ -649,7 +649,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -678,29 +680,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(536, 2)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# import cost of living dataset\n",
     "cost_of_living = pd.read_csv('data/cost-of-living-index.csv')\n",
     "\n",
     "# separate columns for country and city\n",
-    "cost_of_living['country'] = cost_of_living['City'].astype(str).str.split(',').str[1]\n",
-    "cost_of_living['city'] = cost_of_living['City'].astype(str).str.split(',').str[0]\n",
+    "#interesting: US format city, state, Country other countries format city, country\n",
+    "cost_of_living['country'] = cost_of_living['City'].str.split(',').str[-1]\n",
+    "cost_of_living['state'] = cost_of_living['City'].str.split(',').str[1]\n",
+    "cost_of_living['city'] = cost_of_living['City'].str.split(',').str[0]\n",
     "\n",
-    "# convert city and country from object type to string\n",
-    "cost_of_living['country_str'] = cost_of_living.country.apply(lambda x: str(x).split(','))\n",
     "\n",
     "# Just need City, Cost Of Living Index, and Rank\n",
-    "cost_of_living = cost_of_living[['country','city', 'Cost of Living Index', 'Rank']]\n",
-    "cost_of_living.columns = ['country', 'city', 'cost_of_living', 'rank']\n",
+    "cost_of_living = cost_of_living[['country','state','city', 'Cost of Living Index', 'Rank']]\n",
+    "cost_of_living.columns = ['country', 'state', 'city', 'cost_of_living', 'rank_world']\n",
     "\n",
     "\n",
-    "#### FIX ME\n",
-    "# Filter data not related to United States\n",
-    "#cost_of_living = cost_of_living[cost_of_living['country'].astype(str).str=='United States']\n",
-    "#cost_of_living['country']"
+    "# Ability to Filter data not related to United States\n",
+    "#cost_of_living = cost_of_living[cost_of_living['country']==' United States']\n",
+    "\n",
+    "# multi-index\n",
+    "cost_of_living = cost_of_living.set_index(['country', 'state', 'city'])\n",
+    "cost_of_living = cost_of_living.sort_index()\n",
+    "cost_of_living.shape"
    ]
   },
   {
@@ -738,59 +754,67 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>country</th>\n",
-       "      <th>city</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th>cost_of_living</th>\n",
-       "      <th>rank</th>\n",
+       "      <th>rank_world</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>country</th>\n",
+       "      <th>state</th>\n",
+       "      <th>city</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>Bermuda</td>\n",
-       "      <td>Hamilton</td>\n",
-       "      <td>137.56</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>Tirana</td>\n",
+       "      <td>37.25</td>\n",
+       "      <td>424</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>Switzerland</td>\n",
-       "      <td>Zurich</td>\n",
-       "      <td>128.65</td>\n",
-       "      <td>2</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Algiers</td>\n",
+       "      <td>33.44</td>\n",
+       "      <td>469</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>Switzerland</td>\n",
-       "      <td>Basel</td>\n",
-       "      <td>126.89</td>\n",
-       "      <td>3</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>Buenos Aires</td>\n",
+       "      <td>38.57</td>\n",
+       "      <td>409</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>Switzerland</td>\n",
-       "      <td>Lausanne</td>\n",
-       "      <td>119.62</td>\n",
-       "      <td>4</td>\n",
+       "      <td>Armenia</td>\n",
+       "      <td>Armenia</td>\n",
+       "      <td>Yerevan</td>\n",
+       "      <td>33.16</td>\n",
+       "      <td>472</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>Switzerland</td>\n",
-       "      <td>Bern</td>\n",
-       "      <td>118.42</td>\n",
-       "      <td>5</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Adelaide</td>\n",
+       "      <td>72.92</td>\n",
+       "      <td>110</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        country      city  cost_of_living  rank\n",
-       "0       Bermuda  Hamilton          137.56     1\n",
-       "1   Switzerland    Zurich          128.65     2\n",
-       "2   Switzerland     Basel          126.89     3\n",
-       "3   Switzerland  Lausanne          119.62     4\n",
-       "4   Switzerland      Bern          118.42     5"
+       "                                    cost_of_living  rank_world\n",
+       "country    state      city                                    \n",
+       " Albania    Albania   Tirana                 37.25         424\n",
+       " Algeria    Algeria   Algiers                33.44         469\n",
+       " Argentina  Argentina Buenos Aires           38.57         409\n",
+       " Armenia    Armenia   Yerevan                33.16         472\n",
+       " Australia  Australia Adelaide               72.92         110"
       ]
      },
      "execution_count": 15,
