answering questions about the data

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -16,7 +16,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -33,8 +35,9 @@
    ],
    "source": [
     "### QUESTION 0: \n",
-    "#How does income increase with age, and does having \n",
-    "#more years of work experience lead to higher compensation?\n",
+    "\n",
+    "# How does income increase with age, and does having \n",
+    "# more years of work experience lead to higher compensation?\n",
     "\n",
     "income_by_age = pd.read_csv('clean_data/loan_data.csv')\n",
     "data0 = income_by_age.set_index('age')\n",
@@ -47,8 +50,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Answer 0:\n",
+    "# For employees between the age of 18 and 40, there is a direct \n",
+    "# correlation between compensation and age due to having \n",
+    "# more years of work experience.\n",
+    "# For employees over the age of 40, there is a plateau in the median \n",
+    "# data shows there is no significant difference between 20 and 50\n",
+    "# years of experience. \n",
+    "# The mean trend line continues to increase as it accounts for employees\n",
+    "# in careers that allow for continued growth and increasing compensation.\n",
+    "# There is a plateau in median income due to much of the workforce being\n",
+    "# employed in low skill jobs that compensate by the hour. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -83,6 +107,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Answer 1:\n",
+    "# A majority of the population holds less that $50,000 \n",
+    "# of student loan debt. This amount of debt is tolerable\n",
+    "# when comparing to the mean and median income.For most cases,\n",
+    "# The amount of Student Debt does not excede median annual income.\n",
+    "# For the cases of much greater debt holders, those are most likely\n",
+    "# students pursuing higher education for a specialized career. Those\n",
+    "# with more student Loan Debt are more likely to work in higher paying\n",
+    "# carreers with compensation that justifies the investment in Education."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -94,7 +135,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -143,8 +186,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Answer 2:\n",
+    "# The answer is simple and clearly depicts a wage gap between males and females.\n",
+    "# In the scatter plot, each point represents a single occupational\n",
+    "# category. The points horizontal position describes the median income \n",
+    "# for females in that single occupational category. The vertical position\n",
+    "# of the point corresponds the median income of males in that \n",
+    "# same occupational category.\n",
+    "# The trend line for this scatter plot has a slope that is greater\n",
+    "# than 1. This describes the trend that men are compensated more than\n",
+    "# women in the same line of work. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -185,8 +248,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Answer 3:\n",
+    "# When an average of the medain income by ocupation is computed separately\n",
+    "# for males and females, there are two clear trends when consectutive years\n",
+    "# are plotted as a time-series. \n",
+    "# The first of the two trends show tha the average compensation accross\n",
+    "# the many different compensations is increasing over time.\n",
+    "# This means people are getting paid for doing the same types of work.\n",
+    "# The second trend is the amount of separation between the two almost\n",
+    "# parallel curves. Both the male and female curves increase with time,\n",
+    "# but the curve describing median income for males remains approximately\n",
+    "# $10,000 above median income curve for females."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -211,6 +295,20 @@
     "_ = plt.hist(cost_living.cost_of_living, bins=int(np.sqrt(cost_living.shape[0])), color='red', alpha=0.5)\n",
     "_ = plt.hist(data4.cost_of_living, bins=int(np.sqrt(data4.shape[0])), color='blue')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Answer 4:\n",
+    "# The cost of living throughout the world appears to be a \n",
+    "# bimodal distribution. Which separates the world into two groups:\n",
+    "# Those with a higher cost of living, and those with a lower cost of living.\n",
+    "# The cost of living in the US appears to be in the lower portion of\n",
+    "# the group with a higher cost of living"
    ]
   },
   {
@@ -248,6 +346,25 @@
     "plt.xlabel('All Cities in All Countries')\n",
     "plt.ylabel('Cost Of Living')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Answer 5:\n",
+    "# bee swarm plot is a better way to visualize the cost of living data\n",
+    "# when compared to the previous histogram. \n",
+    "# Again, you can see the US is part of the cluster for cities with\n",
+    "# a higher cost of living. In the beeswarm plot, it is more evident that\n",
+    "# the distribution is similar to the rest of the cities in the high cost\n",
+    "# of living group. With the exception that many of the outliers are \n",
+    "# non-US cities. \n",
+    "\n",
+    "# Precaution: Separating and overlaying the US data distorts the data\n",
+    "# in a way that makes determining which of the bimodal groups are larger."
    ]
   },
   {
